@@ -4,21 +4,25 @@ import com.shinhanDS5gi.memento.common.exception.MemberException;
 import com.shinhanDS5gi.memento.domain.Reservation;
 import com.shinhanDS5gi.memento.domain.base.BaseStatus;
 import com.shinhanDS5gi.memento.domain.member.Member;
-import com.shinhanDS5gi.memento.dto.MyMentosByMentiResponse;
-import com.shinhanDS5gi.memento.dto.MyMentosByMentiSliceResponse;
-import com.shinhanDS5gi.memento.dto.MyProfileResponse;
-import com.shinhanDS5gi.memento.dto.UpdateMyPasswordRequest;
-import com.shinhanDS5gi.memento.dto.UpdateMyProfileRequest;
+import com.shinhanDS5gi.memento.domain.member.MemberType;
+import com.shinhanDS5gi.memento.dto.mypage.MyMentosByMentiResponse;
+import com.shinhanDS5gi.memento.dto.mypage.MyMentosByMentiSliceResponse;
+import com.shinhanDS5gi.memento.dto.mento.MentoCertificationsResponse;
+import com.shinhanDS5gi.memento.dto.mypage.MyProfileResponse;
+import com.shinhanDS5gi.memento.dto.mypage.UpdateMyPasswordRequest;
+import com.shinhanDS5gi.memento.dto.mypage.UpdateMyProfileRequest;
 import com.shinhanDS5gi.memento.repository.ReservationRepository;
 import com.shinhanDS5gi.memento.repository.member.MemberRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Slice;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.shinhanDS5gi.memento.common.response.status.BaseExceptionResponseStatus.CANNOT_FOUND_MEMBER;
 import static com.shinhanDS5gi.memento.common.response.status.BaseExceptionResponseStatus.*;
@@ -31,6 +35,7 @@ public class MyPageServiceImpl implements MyPageService {
     private final MemberRepository memberRepository;
     private final PasswordEncoder passwordEncoder;
     private final ReservationRepository reservationRepository;
+    private final MentoCertificationService mentoCertificationService;
 
     /* 나의 프로필 정보 조회 */
     @Override
@@ -39,11 +44,19 @@ public class MyPageServiceImpl implements MyPageService {
         Member member = memberRepository.findByMemberSeqAndStatus(memberSeq, BaseStatus.ACTIVE)
                 .orElseThrow(() -> new MemberException(CANNOT_FOUND_MEMBER));
 
+        List<MentoCertificationsResponse> certifications = Collections.emptyList();
+
+        if (member.getMemberType() == MemberType.MENTO) {
+            certifications = mentoCertificationService.getMentoCertifications(memberSeq);
+        }
+
         return MyProfileResponse.builder()
                 .memberName(member.getMemberName())
                 .memberPhoneNumber(member.getMemberPhoneNumber())
                 .memberBirthDate(member.getMemberBirthDate())
                 .memberId(member.getMemberId())
+                .memberType(member.getMemberType().toString())
+                .certifications(certifications) // 조회된 자격증 목록 or 빈 리스트 추가
                 .build();
     }
 
@@ -79,26 +92,44 @@ public class MyPageServiceImpl implements MyPageService {
     /* 나의 멘토스 내역 조회 (멘티 기준) */
     @Override
     public MyMentosByMentiSliceResponse getMyMentosByMenti(Long memberSeq, int limit, Long cursor) {
-        Long currentCursor = (cursor == null) ? Long.MAX_VALUE : cursor;
+        // 정렬된 전체 예약 목록
+        List<Reservation> allReservations = reservationRepository.findAllByMemberSeqAndStatusWithSorted(memberSeq, BaseStatus.ACTIVE);
 
-        Slice<Reservation> reservationSlice = reservationRepository.findByMemberSeqWithSlice(
-                memberSeq, currentCursor, BaseStatus.ACTIVE, PageRequest.of(0, limit)
-        );
+        int startIndex = 0;
+        if (cursor != null) {
+            for (int i = 0; i < allReservations.size(); i++) {
+                if (allReservations.get(i).getReservationSeq().equals(cursor)) {
+                    startIndex = i + 1;
+                    break;
+                }
+            }
+        }
 
-        List<MyMentosByMentiResponse> content = reservationSlice.getContent().stream()
+        // 시작 인덱스부터 필요한 만큼 데이터 slicing
+        List<Reservation> slicedContent = new ArrayList<>();
+        boolean hasNext = false;
+
+        if (startIndex < allReservations.size()) {
+            int endIndex = Math.min(startIndex + limit, allReservations.size());
+            slicedContent = allReservations.subList(startIndex, endIndex);
+            hasNext = allReservations.size() > startIndex + limit;
+        }
+
+        // DTO로 변환
+        List<MyMentosByMentiResponse> content = slicedContent.stream()
                 .map(MyMentosByMentiResponse::from)
-                .toList();
+                .collect(Collectors.toList());
 
+        // 다음 페이지를 위한 cursor 값 계산
         Long nextCursor = null;
-        if (!content.isEmpty()) {
-            Reservation lastReservation = reservationSlice.getContent().get(reservationSlice.getContent().size() - 1);
-            nextCursor = lastReservation.getReservationSeq();
+        if (!slicedContent.isEmpty()) {
+            nextCursor = slicedContent.get(slicedContent.size() - 1).getReservationSeq();
         }
 
         return MyMentosByMentiSliceResponse.builder()
                 .content(content)
                 .nextCursor(nextCursor)
-                .hasNext(reservationSlice.hasNext())
+                .hasNext(hasNext)
                 .build();
     }
 }
